syntax = "proto3";

package ecopoint.auth.v1;

option go_package = "ecopoint-backend/proto";

import "proto/user.proto";

// Auth service definition
service AuthService {
  rpc GoogleSignIn(GoogleSignInRequest) returns (GoogleSignInResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

// Messages
message GoogleSignInRequest {
  string id_token = 1;
  ecopoint.user.v1.UserType user_type = 2;
}

message GoogleSignInResponse {
  string access_token = 1;
  string refresh_token = 2;
  ecopoint.user.v1.User user = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  ecopoint.user.v1.UserType user_type = 3;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  ecopoint.user.v1.User user = 1;
}